# stemmer_uk

./: Cargo.toml  Readme.md
src/: lib.rs  test_stemmer_uk.rs
